POWR-727 add EVA field to all group types; udpate all group types to use new menu checkboxes

--- a/web/sites/default/config/core.entity_form_display.group.elected_official.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.elected_official.default.yml
@@ -7,6 +7,11 @@ dependencies:
     - field.field.group.elected_official.field_building
     - field.field.group.elected_official.field_bureaus
     - field.field.group.elected_official.field_email
+    - field.field.group.elected_official.field_enable_events_menu_item
+    - field.field.group.elected_official.field_enable_guides_and_informat
+    - field.field.group.elected_official.field_enable_news_and_notices_me
+    - field.field.group.elected_official.field_enable_offices_and_program
+    - field.field.group.elected_official.field_enable_projects_menu_item
     - field.field.group.elected_official.field_legacy_path
     - field.field.group.elected_official.field_logo
     - field.field.group.elected_official.field_official_title
@@ -30,7 +35,7 @@ third_party_settings:
         - field_phone
         - field_building
       parent_name: ''
-      weight: 20
+      weight: 3
       format_type: fieldset
       format_settings:
         id: contact-information
@@ -38,6 +43,24 @@ third_party_settings:
         description: 'City offices may provide mailing address, contact phone, and contact email information to the public by filling out these fields.'
         required_fields: true
       label: 'Contact Information'
+      region: content
+    group_site_menu:
+      children:
+        - field_enable_guides_and_informat
+        - field_enable_news_and_notices_me
+        - field_enable_events_menu_item
+        - field_enable_offices_and_program
+        - field_enable_projects_menu_item
+      parent_name: ''
+      weight: 7
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: 'Turn on menu items for types of content you publish or is related to your office.'
+        required_fields: true
+      label: 'Site menu'
+      region: content
 id: group.elected_official.default
 targetEntityType: group
 bundle: elected_official
@@ -60,7 +83,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_bureaus:
-    weight: 4
+    weight: 5
     settings:
       match_operator: CONTAINS
       size: 60
@@ -76,8 +99,43 @@ content:
     third_party_settings: {  }
     type: email_default
     region: content
+  field_enable_events_menu_item:
+    weight: 10
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
+  field_enable_guides_and_informat:
+    weight: 8
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
+  field_enable_news_and_notices_me:
+    weight: 9
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
+  field_enable_offices_and_program:
+    weight: 11
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
+  field_enable_projects_menu_item:
+    weight: 12
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
   field_legacy_path:
-    weight: 21
+    weight: 13
     settings:
       size: 60
       placeholder: ''
@@ -86,7 +144,7 @@ content:
     region: content
   field_logo:
     type: image_image
-    weight: 5
+    weight: 6
     settings:
       preview_image_style: thumbnail
       progress_indicator: throbber
@@ -117,7 +175,7 @@ content:
     type: string_textfield
     region: content
   field_summary:
-    weight: 3
+    weight: 4
     settings:
       rows: 2
       placeholder: ''
