--- a/web/sites/default/config/core.entity_view_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.default.yml
@@ -7,6 +7,13 @@ dependencies:
     - field.field.group.program.field_audience
     - field.field.group.program.field_building
     - field.field.group.program.field_email
+    - field.field.group.program.field_enable_documents_menu_item
+    - field.field.group.program.field_enable_events_menu_item
+    - field.field.group.program.field_enable_guides_and_informat
+    - field.field.group.program.field_enable_news_and_notices_me
+    - field.field.group.program.field_enable_programs_menu_item
+    - field.field.group.program.field_enable_projects_menu_item
+    - field.field.group.program.field_enable_services_and_inform
     - field.field.group.program.field_legacy_path
     - field.field.group.program.field_logo
     - field.field.group.program.field_parent_group
@@ -28,11 +35,62 @@ third_party_settings:
     regions:
       content:
         - field_summary
+        - group_site_menu_entity_view_1
 id: group.program.default
 targetEntityType: group
 bundle: program
 mode: default
 content:
+  field_enable_guides_and_informat:
+    weight: 2
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
+    region: content
+  field_enable_news_and_notices_me:
+    weight: 3
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
+    region: content
+  field_enable_programs_menu_item:
+    weight: 4
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
+    region: content
+  field_enable_projects_menu_item:
+    weight: 5
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
+    region: content
+  field_enable_services_and_inform:
+    weight: 6
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
+    region: content
   field_summary:
     weight: 0
     settings:
@@ -69,6 +127,11 @@ content:
     region: content
     type: string
     label: hidden
+  group_site_menu_entity_view_1:
+    weight: 1
+    region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   changed: true
   created: true
@@ -76,6 +139,8 @@ hidden:
   field_audience: true
   field_building: true
   field_email: true
+  field_enable_documents_menu_item: true
+  field_enable_events_menu_item: true
   field_legacy_path: true
   field_logo: true
   field_parent_group: true
