--- a/web/sites/default/config/core.entity_view_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.default.yml
@@ -5,6 +5,11 @@ dependencies:
   config:
     - field.field.group.project.field_audience
     - field.field.group.project.field_date_time_range
+    - field.field.group.project.field_enable_documents_menu_item
+    - field.field.group.project.field_enable_events_menu_item
+    - field.field.group.project.field_enable_guides_and_informat
+    - field.field.group.project.field_enable_news_and_notices_me
+    - field.field.group.project.field_enable_projects_menu_item
     - field.field.group.project.field_legacy_path
     - field.field.group.project.field_parent_group
     - field.field.group.project.field_shortname_or_acronym
@@ -24,8 +29,9 @@ third_party_settings:
       settings: {  }
     regions:
       content:
-        - field_summary
         - field_date_time_range
+        - field_summary
+        - group_site_menu_entity_view_1
 id: group.project.default
 targetEntityType: group
 bundle: project
@@ -33,9 +39,9 @@ mode: default
 content:
   field_date_time_range:
     type: daterange_default
-    weight: 1
+    weight: 0
     region: content
-    label: above
+    label: inline
     settings:
       timezone_override: ''
       format_type: month_day_year
@@ -43,13 +49,34 @@ content:
     third_party_settings:
       ds:
         ft:
-          id: default
+          id: expert
           settings:
-            lb: ''
+            lb: ' '
+            prefix: ''
+            lbw: true
+            lbw-el: h2
+            lbw-cl: sr-only
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: p
+            fi-cl: small
+            fi-at: ''
+            suffix: ''
             lb-col: false
-            classes: {  }
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
   field_summary:
-    weight: 0
+    weight: 1
     label: hidden
     settings:
       link_to_entity: false
@@ -84,10 +111,20 @@ content:
             fi-def-at: false
     type: string
     region: content
+  group_site_menu_entity_view_1:
+    weight: 2
+    region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   changed: true
   created: true
   field_audience: true
+  field_enable_documents_menu_item: true
+  field_enable_events_menu_item: true
+  field_enable_guides_and_informat: true
+  field_enable_news_and_notices_me: true
+  field_enable_projects_menu_item: true
   field_legacy_path: true
   field_parent_group: true
   field_shortname_or_acronym: true
