--- a/web/sites/default/config/core.entity_form_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.project.default.yml
@@ -5,6 +5,11 @@ dependencies:
   config:
     - field.field.group.project.field_audience
     - field.field.group.project.field_date_time_range
+    - field.field.group.project.field_enable_documents_menu_item
+    - field.field.group.project.field_enable_events_menu_item
+    - field.field.group.project.field_enable_guides_and_informat
+    - field.field.group.project.field_enable_news_and_notices_me
+    - field.field.group.project.field_enable_projects_menu_item
     - field.field.group.project.field_legacy_path
     - field.field.group.project.field_parent_group
     - field.field.group.project.field_shortname_or_acronym
@@ -14,26 +19,81 @@ dependencies:
   module:
     - chosen_field
     - datetime_range
+    - field_group
     - maxlength
+third_party_settings:
+  field_group:
+    group_site_menu:
+      children:
+        - field_enable_guides_and_informat
+        - field_enable_news_and_notices_me
+        - field_enable_events_menu_item
+        - field_enable_documents_menu_item
+        - field_enable_projects_menu_item
+      parent_name: ''
+      weight: 7
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: 'Turn on menu items for types of content in your project.'
+        required_fields: true
+      label: 'Site menu'
+      region: content
 id: group.project.default
 targetEntityType: group
 bundle: project
 mode: default
 content:
   field_audience:
-    weight: 5
+    weight: 3
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
     region: content
   field_date_time_range:
-    weight: 3
+    weight: 5
     settings: {  }
     third_party_settings: {  }
     type: daterange_default
     region: content
+  field_enable_documents_menu_item:
+    weight: 14
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
+  field_enable_events_menu_item:
+    weight: 13
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
+  field_enable_guides_and_informat:
+    weight: 11
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
+  field_enable_news_and_notices_me:
+    weight: 12
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
+  field_enable_projects_menu_item:
+    weight: 15
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
   field_legacy_path:
-    weight: 7
+    weight: 8
     settings:
       size: 60
       placeholder: ''
@@ -55,7 +115,7 @@ content:
     type: string_textfield
     region: content
   field_summary:
-    weight: 4
+    weight: 6
     settings:
       rows: 2
       placeholder: ''
@@ -68,7 +128,7 @@ content:
     type: string_textarea
     region: content
   field_topics:
-    weight: 6
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
