--- a/web/sites/default/config/core.entity_view_display.group.elected_official.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.elected_official.default.yml
@@ -7,6 +7,11 @@ dependencies:
     - field.field.group.elected_official.field_building
     - field.field.group.elected_official.field_bureaus
     - field.field.group.elected_official.field_email
+    - field.field.group.elected_official.field_enable_events_menu_item
+    - field.field.group.elected_official.field_enable_guides_and_informat
+    - field.field.group.elected_official.field_enable_news_and_notices_me
+    - field.field.group.elected_official.field_enable_offices_and_program
+    - field.field.group.elected_official.field_enable_projects_menu_item
     - field.field.group.elected_official.field_legacy_path
     - field.field.group.elected_official.field_logo
     - field.field.group.elected_official.field_official_title
@@ -16,13 +21,62 @@ dependencies:
     - group.type.elected_official
   module:
     - ds
+third_party_settings:
+  ds:
+    layout:
+      id: layout_onecol
+      library: layout_discovery/onecol
+      disable_css: false
+      entity_classes: all_classes
+      settings: {  }
+    regions:
+      content:
+        - field_official_title
+        - field_summary
+        - group_site_menu_entity_view_1
 id: group.elected_official.default
 targetEntityType: group
 bundle: elected_official
 mode: default
 content:
-  field_summary:
+  field_official_title:
+    type: string
     weight: 0
+    region: content
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: p
+            fi-cl: small
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
+  field_summary:
+    weight: 1
     label: hidden
     settings:
       link_to_entity: false
@@ -57,6 +111,11 @@ content:
             fi-def-at: false
     type: string
     region: content
+  group_site_menu_entity_view_1:
+    weight: 2
+    region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   changed: true
   created: true
@@ -64,9 +123,13 @@ hidden:
   field_building: true
   field_bureaus: true
   field_email: true
+  field_enable_events_menu_item: true
+  field_enable_guides_and_informat: true
+  field_enable_news_and_notices_me: true
+  field_enable_offices_and_program: true
+  field_enable_projects_menu_item: true
   field_legacy_path: true
   field_logo: true
-  field_official_title: true
   field_phone: true
   field_shortname_or_acronym: true
   label: true
