--- a/web/sites/default/config/views.view.group_events.yml
+++ b/web/sites/default/config/views.view.group_events.yml
@@ -15,10 +15,10 @@ dependencies:
     - time_field
     - user
 id: group_events
-label: 'Group events'
+label: 'Group: Events'
 module: views
-description: ''
-tag: ''
+description: 'A list of events in a group'
+tag: Group
 base_table: node_field_data
 base_field: nid
 core: 8.x
@@ -55,12 +55,17 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
-        type: mini
+        type: full
         options:
-          items_per_page: 25
+          items_per_page: 20
           offset: 0
           id: 0
           total_pages: null
+          tags:
+            previous: ‹‹
+            next: ››
+            first: '« First'
+            last: 'Last »'
           expose:
             items_per_page: false
             items_per_page_label: 'Items per page'
@@ -69,9 +74,7 @@ display:
             items_per_page_options_all_label: '- All -'
             offset: false
             offset_label: Offset
-          tags:
-            previous: ‹‹
-            next: ››
+          quantity: 9
       style:
         type: html_list
         options:
@@ -375,6 +378,8 @@ display:
         groups:
           1: AND
           2: OR
+      link_url: ''
+      link_display: page_1
     cache_metadata:
       max-age: -1
       contexts:
@@ -388,6 +393,7 @@ display:
       tags:
         - 'config:field.storage.node.field_start_date'
         - 'config:field.storage.node.field_start_time'
+        - extensions
   block_1:
     display_plugin: block
     id: block_1
@@ -395,21 +401,27 @@ display:
     position: 2
     display_options:
       display_extenders: {  }
-      title: Events
+      title: 'Upcoming events'
       defaults:
         title: false
         style: false
         row: false
         pager: false
+        use_more: false
+        use_more_always: false
+        use_more_text: false
       style:
         type: html_list
       row:
         type: fields
       pager:
-        type: none
+        type: some
         options:
-          items_per_page: null
+          items_per_page: 5
           offset: 0
+      use_more: true
+      use_more_always: false
+      use_more_text: 'More events'
     cache_metadata:
       max-age: -1
       contexts:
@@ -422,6 +434,7 @@ display:
       tags:
         - 'config:field.storage.node.field_start_date'
         - 'config:field.storage.node.field_start_time'
+        - extensions
   page_1:
     display_plugin: page
     id: page_1
@@ -804,6 +817,7 @@ display:
         group_by: false
         header: false
         arguments: false
+        title: false
       display_description: ''
       group_by: false
       header:
@@ -867,6 +881,7 @@ display:
           entity_type: group_content
           entity_field: gid
           plugin_id: group_id
+      title: Events
     cache_metadata:
       max-age: -1
       contexts:
@@ -882,6 +897,7 @@ display:
         - 'config:field.storage.node.field_start_date'
         - 'config:field.storage.node.field_start_time'
         - 'config:field.storage.node.field_summary'
+        - extensions
   page_2:
     display_plugin: page
     id: page_2
@@ -1581,3 +1597,4 @@ display:
         - 'config:field.storage.node.field_start_date'
         - 'config:field.storage.node.field_start_time'
         - 'config:field.storage.node.field_summary'
+        - extensions
