POWR-714 - added ids to regions and mapped them in behat.yml, changed demo feature to site health check, disabled other tests

--- a/tests/behat.yml
+++ b/tests/behat.yml
@@ -25,7 +25,17 @@ default:
       api_driver: 'drush'
       blackbox: ~
       region_map:
-        footer: "#footer"
+        global_admin: "#toolbar-administration" # editor toolbar
+        pre_header: "#pre_header" # alerts
+        header: "#header_region" # site branding
+        primary_menu: "#primary_menu" # main navigation
+        header_form: "#header_form" # search form
+        tabs: "#tabs" # admin tabs
+        messages: "#messages" # status messages and group notifications
+        pre_content: "#pre_content" # portland revision block
+        content: "#content" # breadcrumbs, title, content
+        footer_first: "#footer_first" # policies and disclaimers
+        footer_second: "#footer_second" # copyright block
       selectors:
         message_selector: '.alert'
         error_message_selector: '.alert.alert-danger'
