POWR-728 create display and views for event; add a local.service.yml and reference from settings.local.php

--- a/composer.json
+++ b/composer.json
@@ -176,6 +176,9 @@
             },
             "drupal/embed": {
                 "2824110 - Allow site-builders to use a non-managed file as button icon": "https://www.drupal.org/files/issues/2018-07-03/embed-allow-non-managed-button-icon-files-2824110-9.patch"
+            },
+            "drupal/page_manager": {
+                "2921404 - Use context in variant JS to be compatible with BigPipe": "https://www.drupal.org/files/issues/2018-03-14/2921404-16.patch"
             }
         },
         "merge-plugin": {
