--- a/web/sites/default/config/views.view.group_news.yml
+++ b/web/sites/default/config/views.view.group_news.yml
@@ -539,7 +539,7 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      block_description: 'Group news'
+      block_description: 'Group: Featured News (4)'
       pager:
         type: some
         options:
