--- a/web/sites/default/config/core.entity_view_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.default.yml
@@ -19,6 +19,7 @@ dependencies:
     - datetime
     - ds
     - entity_reference_revisions
+    - field_group
     - panelizer
     - text
     - time_field
@@ -38,14 +39,56 @@ third_party_settings:
       settings: {  }
     regions:
       content:
-        - field_all_day
-        - field_summary
         - field_start_date
-        - field_start_time
         - field_end_date
-        - field_end_time
+        - group_date_and_time
+        - field_all_day
+        - group_start_to_end_time
         - field_event_location
+        - field_start_time
+        - field_summary
+        - field_end_time
         - field_body_content
+  field_group:
+    group_date_and_time:
+      children:
+        - field_start_date
+        - field_end_date
+      parent_name: ''
+      weight: 2
+      format_type: html_element
+      format_settings:
+        label: 'Start to end date'
+        element: div
+        show_label: false
+        label_element: h3
+        attributes: ''
+        effect: none
+        speed: fast
+        id: ''
+        classes: 'event--date h4'
+      label: 'Start to end date'
+      region: content
+    group_start_to_end_time:
+      children:
+        - field_all_day
+        - field_start_time
+        - field_end_time
+      parent_name: ''
+      weight: 3
+      format_type: html_element
+      format_settings:
+        label: 'Start to end time'
+        element: div
+        show_label: false
+        label_element: h3
+        attributes: ''
+        effect: none
+        speed: fast
+        id: ''
+        classes: 'event--time h4 mb-4'
+      label: 'Start to end time'
+      region: content
 id: node.event.default
 targetEntityType: node
 bundle: event
@@ -53,41 +96,125 @@ mode: default
 content:
   field_all_day:
     type: boolean
-    weight: 0
+    weight: 3
     region: content
-    label: above
+    label: hidden
     settings:
-      format: default
+      format: custom
+      format_custom_true: 'All day'
       format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: '<i class="fas fa-clock"></i> '
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: span
+            fi-cl: all-day
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
   field_body_content:
     type: text_default
-    weight: 7
+    weight: 6
     region: content
     label: hidden
     settings: {  }
     third_party_settings: {  }
   field_end_date:
-    weight: 4
+    weight: 1
     label: hidden
     settings:
       timezone_override: ''
-      format_type: weekday_month_day
-    third_party_settings: {  }
+      format_type: month_day_year
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: to
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: span
+            fi-cl: 'event--end-date pl-1'
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
     type: datetime_default
     region: content
   field_end_time:
     weight: 5
     label: hidden
     settings:
-      time_format: 'h:i a'
-    third_party_settings: {  }
+      time_format: '\t\o g:i A'
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: span
+            fi-cl: 'event--end-time pl-1'
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
     type: time_formatter
     region: content
   field_event_location:
     type: entity_reference_revisions_entity_view
-    weight: 6
+    weight: 4
     label: hidden
     settings:
       view_mode: default
@@ -102,33 +229,81 @@ content:
             lb-col: false
             classes: {  }
     region: content
-  field_group:
-    weight: 8
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_start_date:
-    weight: 2
+    weight: 0
     label: hidden
     settings:
       timezone_override: ''
-      format_type: weekday_month_day
-    third_party_settings: {  }
+      format_type: month_day_year
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: '<i class="fas fa-calendar"></i>'
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: span
+            fi-cl: 'event--start-date pl-2'
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
     type: datetime_default
     region: content
   field_start_time:
-    weight: 3
+    weight: 4
     label: hidden
     settings:
-      time_format: 'h:i a'
-    third_party_settings: {  }
+      time_format: 'g:i A'
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: span
+            fi-cl: 'event--start-time pl-2'
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
     type: time_formatter
     region: content
   field_summary:
-    weight: 1
+    weight: 5
     label: hidden
     settings:
       link_to_entity: false
@@ -166,5 +341,6 @@ content:
 hidden:
   content_moderation_control: true
   field_body: true
+  field_group: true
   field_legacy_path: true
   links: true
