POWR-728 correct the block layout page restrictions

--- a/web/sites/default/config/block.block.views_block__group_events_block_1.yml
+++ b/web/sites/default/config/block.block.views_block__group_events_block_1.yml
@@ -6,6 +6,7 @@ dependencies:
     - views.view.group_events
   module:
     - ctools
+    - system
     - views
   theme:
     - cloudy
@@ -34,3 +35,8 @@ visibility:
     negate: false
     context_mapping:
       group: '@group.group_route_context:group'
+  request_path:
+    id: request_path
+    pages: 'group/*/*'
+    negate: true
+    context_mapping: {  }
