POWR-728 correct some block layout and update news list view

--- a/web/sites/default/config/block.block.views_block__group_projects_block_1.yml
+++ b/web/sites/default/config/block.block.views_block__group_projects_block_1.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - views.view.group_projects
   module:
+    - group
     - system
     - views
   theme:
@@ -26,6 +27,16 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: 'group/*/*'
+    pages: '/group/*/*'
     negate: true
     context_mapping: {  }
+  group_type:
+    id: group_type
+    group_types:
+      bureau_office: bureau_office
+      elected_official: elected_official
+      program: program
+      project: project
+    negate: false
+    context_mapping:
+      group: '@group.group_route_context:group'
