--- a/web/sites/default/config/views.view.group_events.yml
+++ b/web/sites/default/config/views.view.group_events.yml
@@ -927,17 +927,19 @@ display:
           plugin_id: group_id
       title: Events
       footer:
-        area_text_custom:
-          id: area_text_custom
+        area:
+          id: area
           table: views
-          field: area_text_custom
+          field: area
           relationship: none
           group_type: group
           admin_label: ''
-          empty: false
-          tokenize: false
-          content: '<div class="my-3"><a href="/group/{{ raw_arguments.gid }}/events/archive" class="btn btn-primary>View past events</a></div>'
-          plugin_id: text_custom
+          empty: true
+          tokenize: true
+          content:
+            value: '<div class="my-3"><a href="/group/{{ raw_arguments.gid }}/events/archive" class="btn btn-primary>View past events</a></div>'
+            format: simple_editor
+          plugin_id: text
     cache_metadata:
       max-age: -1
       contexts:
