--- a/web/sites/default/config/views.view.group_news.yml
+++ b/web/sites/default/config/views.view.group_news.yml
@@ -399,7 +399,7 @@ display:
   attachment_1:
     display_plugin: attachment
     id: attachment_1
-    display_title: Featured
+    display_title: 'Featured on top of list'
     position: 3
     display_options:
       display_extenders: {  }
@@ -535,7 +535,7 @@ display:
   block_1:
     display_plugin: block
     id: block_1
-    display_title: Block
+    display_title: 'Block: featured'
     position: 1
     display_options:
       display_extenders: {  }
@@ -564,7 +564,7 @@ display:
       style:
         type: default
         options:
-          row_class: d-flex
+          row_class: ''
           default_row_class: false
           uses_fields: false
       row:
@@ -695,6 +695,7 @@ display:
         groups:
           1: AND
       block_hide_empty: true
+      display_description: ''
     cache_metadata:
       max-age: -1
       contexts:
@@ -708,7 +709,7 @@ display:
   page_1:
     display_plugin: page
     id: page_1
-    display_title: Page
+    display_title: 'Page: news list'
     position: 2
     display_options:
       display_extenders: {  }
@@ -1204,6 +1205,7 @@ display:
         title: ''
         description: ''
         weight: 0
+      display_description: ''
     cache_metadata:
       max-age: -1
       contexts:
