--- a/web/sites/default/config/block.block.views_block__group_events_block_1.yml
+++ b/web/sites/default/config/block.block.views_block__group_events_block_1.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - views.view.group_events
   module:
-    - ctools
+    - group
     - system
     - views
   theme:
@@ -25,18 +25,18 @@ settings:
   items_per_page: none
   context_mapping: {  }
 visibility:
-  'entity_bundle:group':
-    id: 'entity_bundle:group'
-    bundles:
+  group_type:
+    id: group_type
+    group_types:
+      project: project
       bureau_office: bureau_office
       elected_official: elected_official
       program: program
-      project: project
     negate: false
     context_mapping:
       group: '@group.group_route_context:group'
   request_path:
     id: request_path
-    pages: 'group/*/*'
+    pages: '/group/*/*'
     negate: true
     context_mapping: {  }
