--- a/web/sites/default/config/views.view.group_events.yml
+++ b/web/sites/default/config/views.view.group_events.yml
@@ -50,10 +50,10 @@ display:
         type: basic
         options:
           submit_button: Apply
-          reset_button: false
+          reset_button: true
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
-          expose_sort_order: true
+          expose_sort_order: false
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
@@ -663,17 +663,17 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          operator: '>='
+          operator: between
           value:
-            min: ''
-            max: ''
+            min: today
+            max: '+30 days'
             value: today
-            type: date
+            type: offset
           group: 2
-          exposed: false
+          exposed: true
           expose:
             operator_id: field_start_date_value_op
-            label: 'Start date (field_start_date)'
+            label: 'Start date between'
             description: ''
             use_operator: false
             operator: field_start_date_value_op
@@ -685,6 +685,7 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
+              sitewide_editor: '0'
             placeholder: ''
             min_placeholder: ''
             max_placeholder: ''
@@ -853,6 +854,7 @@ display:
       use_more_text: 'More events'
       block_description: 'Group: Upcoming Events (5)'
       display_description: '5 upcoming events grouped by date links to events list page for group'
+      block_hide_empty: true
     cache_metadata:
       max-age: -1
       contexts:
